      (\PR{14827})

      \item Virtual classes (e.g., class unions) had \code{NULL} prototype
      even if that was not a legal subclass.  See \code{?setClassUnion}.
	
      \item The C prototypes for \code{zdotc} and \code{zdotu} in
      \file{R_ext/BLAS.h} have been changed to the more modern style
      rather than that used by \command{f2c}.  (Patch by Berwin Turlach.)
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The internal \code{untar()} (as used by default by
      \command{R CMD INSTALL}) now knows about some \command{pax}
      headers which \command{bsdtar} (e.g., the default \command{tar} for
      Mac OS >= 10.6) can incorrectly include in \command{tar} files,
      and will skip them with a warning.

      \item PCRE has been upgraded to version 8.21: as well as bug fixes
      and greater Perl compatibility, this adds a JIT pattern compiler,
      about which PCRE's news says
      \sQuote{large performance benefits can be had in many situations}.
      This is supported on most but not all \R platforms.

      \item Function \code{compactPDF()} in package \pkg{tools} now
      takes the default for argument \code{gs_quality} from environment
      variable \env{GS_QUALITY}: there is a new value \code{"none"}, the
      ultimate default, which prevents GhostScript being used in
      preference to \command{qpdf} just because environment variable
      \env{R_GSCMD} is set.  If \env{R_GSCMD} is unset or set to
      \code{""}, the function will try to find a suitable GhostScript
      executable.

      \item The included version of zlib has been updated to 1.2.6.

      \item For consistency with the \code{logLik()} method,
      \code{nobs()} for \code{"nls"} files now excludes observations
      with zero weight.  (Reported by Berwin Turlach.)
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now reports by default on licenses not