@@ -1,8 +1,8 @@
 
-R version 2.15.0 alpha (2012-03-02 r58556)
+R Under development (unstable) (2012-03-08 r58640)
 Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin10.8.0/x86_64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -857,4 +857,7 @@ Creating a new generic function for 'qqplot' in the global environment
 > ## "IntOrChar" had invalid NULL prototype < 2.15.0
 > setClassUnion("IntOrChar", c("integer", "character"))
 > stopifnot(is.integer(getClass("IntOrChar")@prototype))
+> ## produced an error < 2.15.0
+> stopifnot(identical(isGeneric("&&"), FALSE))
+> 
 > 
